--- a/pan-map/package.json
+++ b/pan-map/package.json
@@ -7,10 +7,13 @@
     "bootstrap": "^4.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-iframe": "^1.8.0",
+    "react-ratings-declarative": "^3.4.1",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-star-ratings": "^2.3.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
