--- a/pan-map/package.json
+++ b/pan-map/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "react": "^16.8.6",
+    "react-bnb-gallery": "^1.1.6",
     "react-dom": "^16.8.6",
     "react-iframe": "^1.8.0",
     "react-ratings-declarative": "^3.4.1",
